# brain-tumor-xAI

./: .env.example  .gitignore  LICENSE  README.md  project.json  pyproject.toml  requirements.txt  run.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/features/: AccessibilityPanel.tsx  ChatbotV2.tsx  ExplainabilityPanel.tsx  FeatureCard.tsx  ImageUpload.tsx  ModelCard.tsx  ResultsDisplay.tsx  StatCard.tsx  index.ts
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/components/ui/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  Loading.tsx  Progress.tsx  Toggle.tsx  index.ts
frontend/src/context/: AccessibilityContext.tsx  AnalysisContext.tsx  HealthContext.tsx
frontend/src/hooks/: index.ts  useAnalysis.ts  useFileUpload.ts  useKeyboardNavigation.ts
frontend/src/pages/: AboutPage.tsx  AnalyzePage.tsx  HomePage.tsx  ModelsPage.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  helpers.ts
knowledge_base/: medical_knowledge.json
models/: best_densenet121.pth  best_efficientnet_b3.pth  best_resnet50.pth
server/: __init__.py  app.py  classifier.py  config.py  explainability.py
server/chatbot/: __init__.py  agent.py  fallback.py  llm_client.py  rate_limiter.py
